@@ -1,9 +1,8 @@
-/** Interface for the DKOutgoingProxy class for exporting objects via D-Bus
-
-   Copyright (C) 2010 Free Software Foundation, Inc.
+/** Interface for the DKOutgoingProxy class for vending objects to D-Bus.
+   Copyright (C) 2012 Free Software Foundation, Inc.
 
    Written by:  Niels Grewe <niels.grewe@halbordnung.de>
-   Created: June 2010
+   Created: January 2012
 
    This library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Lesser General Public
@@ -21,13 +20,21 @@
    Boston, MA 02111 USA.
    */
 
-#include "DKProxy+Private.h"
+#import "DKProxy+Private.h"
 
-@interface DKOutgoingProxy: DKProxy
+
 /**
- * Exports anObject via D-Bus by installing it in the object graph as a child of
- * rootProxy.
+ * Instance of the DKOutgoingProxy class are used to broker the exchange between
+ * local objects and other clients on D-Bus.
  */
+@interface DKOutgoingProxy : DKProxy
+{
+  @private
+  /**
+   * The represented object.
+   */
+  id object;
+}
 + (id) proxyWithParent: (DKProxy*)rootProxy
                 object: (id)anObject;
 @end
